add editor for mask

--- a/app/templates/user/base.html
+++ b/app/templates/user/base.html
@@ -27,7 +27,7 @@
                 {% endif %}
                 <li><a href="/logout">Logout</a></li> -->
                 <li><a href="/user">Главная панель</a></li>
-                <li><a href="/user/catalog">Каталог</a></li>
+                <li><a href="/user/catalog">Панель инструментов</a></li>
                 {% if user.role == "ADMIN" %}
                 <li><a href="/admin">Панель администратора</a></li>
                 {% endif %}
