add dashboard for admin

--- a/app/static/admin/admin.css
+++ b/app/static/admin/admin.css
@@ -50,3 +50,12 @@ main {
     margin-bottom: 10px;
 }
 
+/* .canvas-one {
+    width: 800px;
+    height: 200px;
+}
+
+.canvas-two {
+    width: 400px;
+    height: 200px;
+} */
